Update issue 3 for extra covers

--- a/css/style.css
+++ b/css/style.css
@@ -683,86 +683,94 @@ section#stockists {
 }
 
 #issue03_img1 {
-  background-image: url("../images/issue03/NICOTINE01.jpg");
+  background-image: url("../images/issue03/NICOTINE03COVER2");
 }
 
 #issue03_img2 {
-  background-image: url("../images/issue03/NICOTINE02.jpg");
+  background-image: url("../images/issue03/NICOTINE03COVER3");
 }
 
 #issue03_img3 {
-  background-image: url("../images/issue03/NICOTINE03.jpg");
+  background-image: url("../images/issue03/NICOTINE01.jpg");
 }
 
 #issue03_img4 {
-  background-image: url("../images/issue03/NICOTINE04.jpg");
+  background-image: url("../images/issue03/NICOTINE02.jpg");
 }
 
 #issue03_img5 {
-  background-image: url("../images/issue03/NICOTINE05.jpg");
+  background-image: url("../images/issue03/NICOTINE03.jpg");
 }
 
 #issue03_img6 {
-  background-image: url("../images/issue03/NICOTINE06.jpg");
+  background-image: url("../images/issue03/NICOTINE04.jpg");
 }
 
 #issue03_img7 {
-  background-image: url("../images/issue03/NICOTINE07.jpg");
+  background-image: url("../images/issue03/NICOTINE05.jpg");
 }
 
 #issue03_img8 {
-  background-image: url("../images/issue03/NICOTINE08.jpg");
+  background-image: url("../images/issue03/NICOTINE06.jpg");
 }
 
 #issue03_img9 {
-  background-image: url("../images/issue03/NICOTINE09.jpg");
+  background-image: url("../images/issue03/NICOTINE07.jpg");
 }
 
 #issue03_img10 {
-  background-image: url("../images/issue03/NICOTINE10.jpg");
+  background-image: url("../images/issue03/NICOTINE08.jpg");
 }
 
 #issue03_img11 {
-  background-image: url("../images/issue03/NICOTINE11.jpg");
+  background-image: url("../images/issue03/NICOTINE09.jpg");
 }
 
 #issue03_img12 {
-  background-image: url("../images/issue03/NICOTINE12.jpg");
+  background-image: url("../images/issue03/NICOTINE10.jpg");
 }
 
 #issue03_img13 {
-  background-image: url("../images/issue03/NICOTINE13.jpg");
+  background-image: url("../images/issue03/NICOTINE11.jpg");
 }
 
 #issue03_img14 {
-  background-image: url("../images/issue03/NICOTINE14.jpg");
+  background-image: url("../images/issue03/NICOTINE12.jpg");
 }
 
 #issue03_img15 {
-  background-image: url("../images/issue03/NICOTINE15.jpg");
+  background-image: url("../images/issue03/NICOTINE13.jpg");
 }
 
 #issue03_img16 {
-  background-image: url("../images/issue03/NICOTINE16.jpg");
+  background-image: url("../images/issue03/NICOTINE14.jpg");
 }
 
 #issue03_img17 {
-  background-image: url("../images/issue03/NICOTINE17.jpg");
+  background-image: url("../images/issue03/NICOTINE15.jpg");
 }
 
 #issue03_img18 {
-  background-image: url("../images/issue03/NICOTINE18.jpg");
+  background-image: url("../images/issue03/NICOTINE16.jpg");
 }
 
 #issue03_img19 {
-  background-image: url("../images/issue03/NICOTINE19.jpg");
+  background-image: url("../images/issue03/NICOTINE17.jpg");
 }
 
 #issue03_img20 {
-  background-image: url("../images/issue03/NICOTINE20.jpg");
+  background-image: url("../images/issue03/NICOTINE18.jpg");
 }
 
 #issue03_img21 {
+  background-image: url("../images/issue03/NICOTINE19.jpg");
+}
+
+#issue03_img22 {
+  background-image: url("../images/issue03/NICOTINE20.jpg");
+}
+
+#issue03_img23 {
   background-image: url("../images/issue03/NICOTINE21.jpg");
 }
 
